<resources>
    <string name="app_name">resiexpresschamp</string>
    <string name="splashlogo">splashlogo</string>
    <string name="emptytext" />
    <string name="quick_delivery_at_your_doorstep">Quick Delivery At Your Doorstep</string>
    <string name="enjoy_quick_pick_up_and_delivery_to_your_destination">Enjoy quick pick-up and delivery to your destination</string>
    <string name="different_modes_of_payment_either_before_and_after_delivery_without_stress">Different modes of payment either before and after delivery without stress</string>
    <string name="flexible_payment">Flexible Payment</string>
    <string name="track_your_packages_items_from_the_comfort_of_your_home_till_final_destination">Track your packages/items from the comfort of your home till final destination</string>
    <string name="real_time_tracking">Real-Time Tracking</string>
    <string name="title_activity_signup">signup</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ivanov_ivan">Ivanov Ivan</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="password1">********</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password2">********</string>
    <string name="by_ticking_this_box_you_agree_to_our_terms_and_conditions_and_private_policy">By ticking this box, you agree to our Terms and conditions and private policy</string>
    <string name="already_have_an_accountq">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="or_sign_in_using">or sign in using</string>
    <string name="googlelogo">Google</string>
    <string name="complete_the_sign_up_process_to_get_started">Complete the sign up process to get started</string>
    <string name="create_an_account">Create an account</string>
    <string name="full_name">Full name</string>
    <string name="welcome_back">Welcome back</string>
    <string name="fill_in_your_emails_and_password_to_continue">Fill in your email and password to continue</string>
    <string name="remember_password">Remember password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="googlelogodesk">Google</string>
    <string name="redi_express_logo">Redi Express logo</string>
    <string name="log_in">Log in</string>
    <string name="remember_password_back_to">Remember password? Back to</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="resend">resend</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="if_you_didn_t_recieve_code">If you didn\'t recieve code,</string>
    <string name="set_new_password">Set New Password</string>
    <string name="enter_the_6_digits_numbers_sent_to_your_email">Enter the 6 digits numbers sent to your email</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="iconfirm_password">Confirm Password</string>
    <string name="emptyvalue" />
    <string name="signup">Sign Up</string>
    <string name="mail_ru">********@mail.ru</string>
    <string name="new_password">New Password</string>
    <string name="profile">Profile</string>
    <string name="track">Track</string>
    <string name="wallet">Wallet</string>
    <string name="home">Home</string>
    <string name="statements_reports"><![CDATA[Statements & Reports]]></string>
    <string name="mute_unmute_set_location_tracking_setting"><![CDATA[mute, unmute, set location & tracking setting]]></string>
    <string name="card_bank_account_settings"><![CDATA[Card & Bank account settings]]></string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home_s3">home_s3</string>
    <string name="n10_712_00">N10,712:00</string>
    <string name="search_services">Search services</string>
    <string name="cooked_up">Cooked Up</string>
    <string name="hello_name">Hello Name!</string>
    <string name="genius">Genius</string>
    <string name="love_revolution">Love Revolution</string>
    <string name="we_trust_you_are_having_a_great_time">We trust you are having a great time</string>
    <string name="www_techmeetup">www.techmeetup</string>
    <string name="special_for_you">Special for you</string>
    <string name="what_would_you_like_to_do">What would you like to do</string>
    <string name="tech_meetup_coming_soon">Tech Meetup coming soon</string>
    <string name="the">The</string>
    <string name="pathdata1">M34.4,44.59C35.28,44.76 36.11,45.14 36.8,45.7C37.5,46.27 38.04,46.99 38.39,47.82C38.73,48.65 38.86,49.54 38.78,50.43C38.69,51.33 38.38,52.18 37.88,52.92L51.71,63.66C52.16,63.43 52.68,63.35 53.18,63.45C53.68,63.55 54.13,63.81 54.46,64.19C54.79,64.58 54.98,65.07 55,65.57C55.02,66.08 54.86,66.58 54.56,66.99C54.26,67.4 53.83,67.69 53.34,67.83C52.85,67.96 52.33,67.93 51.87,67.73C51.4,67.53 51.01,67.18 50.77,66.73C50.53,66.29 50.44,65.77 50.53,65.27L36.46,54.35C35.8,54.81 35.04,55.11 34.25,55.23C33.46,55.36 32.64,55.3 31.87,55.08C31.1,54.85 30.39,54.45 29.8,53.91C29.2,53.38 28.73,52.71 28.42,51.97C28.11,51.23 27.97,50.43 28.01,49.63C28.06,48.82 28.27,48.04 28.66,47.33C29.04,46.63 29.57,46.01 30.22,45.54C30.87,45.07 31.61,44.74 32.4,44.59L32.4,35.5H34.4V44.59H34.4ZM35.2,49.9C35.2,50.14 35.15,50.37 35.06,50.59C34.97,50.81 34.84,51.01 34.67,51.17C34.51,51.34 34.31,51.47 34.09,51.56C33.87,51.65 33.64,51.7 33.4,51.7C33.16,51.7 32.93,51.65 32.71,51.56C32.49,51.47 32.29,51.34 32.13,51.17C31.96,51.01 31.83,50.81 31.74,50.59C31.65,50.37 31.6,50.14 31.6,49.9C31.6,49.42 31.79,48.96 32.13,48.63C32.47,48.29 32.92,48.1 33.4,48.1C33.88,48.1 34.34,48.29 34.67,48.63C35.01,48.96 35.2,49.42 35.2,49.9Z</string>
</resources>