<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_s2">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout3"
        tools:ignore="TextSizeCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textAlignment="center"
                android:textColor="@color/text_primary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/fill_in_your_emails_and_password_to_continue"
                android:textColor="@color/gray_light"
                android:textSize="16sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout2"
        app:layout_constraintStart_toStartOf="@+id/frameLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/emailaddr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email_address"
                android:textColor="@color/gray_light" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/imailaddr"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@drawable/inputfieldgray"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/gray_light"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:textColor="@color/gray_light" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/loginpassowrd"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@drawable/inputfieldgray"
                android:hint="@string/password1"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:paddingStart="8dp"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/gray_light"
                tools:ignore="TouchTargetSizeCheck" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/rememberpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:paddingStart="8dp"
                    android:button="@drawable/selectorcbox"
                    android:text="@string/remember_password"
                    android:textColor="@color/gray_light"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/forgotpasswordtextbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/forgot_password"
                    android:textColor="@color/primary_color" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="344dp"
        android:layout_height="158dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        tools:ignore="TextSizeCheck">

        <Button

            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@drawable/logininactive"
            android:fontFamily="@font/roboto_bold"
            android:stateListAnimator="@null"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="visible">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/already_have_an_accountq"
                    android:textColor="#A7A7A7"
                    android:textSize="16sp"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/signup"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp"
                    tools:ignore="TextSizeCheck" />

            </TableRow>

        </TableLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="64dp">

            <TextView
                android:id="@+id/orsigningusing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/or_sign_in_using"
                android:textColor="@color/gray_light"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/googlelogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:background="#00FFFFFF"
                android:contentDescription="@string/googlelogodesk"
                android:scaleType="center"
                app:srcCompat="@drawable/googlelogo"
                tools:ignore="TouchTargetSizeCheck" />
        </FrameLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>